# Atoi-Python

./: .env  .env.template  README.md  docker-compose.local.yml  pyproject.toml  run.sh
app/: main.py
app/api/: deps.py
app/api/endpoints/: api.py
app/core/: cache.py  config.py  utility.py
app/crud/: __init__.py  atoi.py
app/schemas/: atoi.py
app/tests/: atoi_test.py
