[tool.poetry]
name = "atoi_project"
version = "0.1.0"
description = ""
authors = ["Behrooz Payoon <Behrooz.payoon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.79.0"
uvicorn = "0.18.2"
gunicorn = "20.1.0"
pydantic = "1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
